@@ -69,6 +69,7 @@ Additions:
     * Add infrastructure to handle message between ecore and parent ecore in Ecore_Evas.
     * Edje textblock: Added support for size_range.
 	* Ecore_x: Add atom related with indicator type. 
+    * Ecore_x: Add manual render code before deiconify
 
 Deprecations:
     * ecore_x:
